--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         @media (max-width: 768px) {
             .timeline-year {
                 position: relative;
-                left: 50%;
+                left: 25%;
                 /* Убираем отступ слева на мобильных устройствах */
-                top: 0;
+                top: 10px;
                 /* Поднимаем зарубку немного вверх */
                 font-size: 1.2rem;
                 /* Уменьшаем размер шрифта на мобильных устройствах */
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">1920-1930</div>
+                <div class="timeline-year" style="top: 100px;">3000–30 гг. до н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">500 г. до н. э. – V век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/3ancient.jpg" alt="Ancient" class="rounded-xl shadow-md w-full" />
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">500 г. до н. э. – X век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">V – XV век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/codex.jpg" alt="Codex" class="rounded-xl shadow-md w-full" />
@@ -298,7 +298,9 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">VII–XV века н. э.
+
+                </div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -331,7 +333,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">около 1450 г</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/middleage.jpg" alt="Middleage" class="rounded-xl shadow-md w-full" />
@@ -361,7 +363,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">XVI-XVII века н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -393,7 +395,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">начало XIX века</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/muybridge_race_horse_animated.webp" alt="Photography"
@@ -425,7 +427,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">начало XX века</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -456,7 +458,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">1900–2000 годы</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/books.jpg" alt="Books" class="rounded-xl shadow-md w-full" />
@@ -484,7 +486,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <div class="timeline-year" style="top: 100px;">1920–1930-е годы</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -544,7 +546,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 300px;">год</div>
+                <div class="timeline-year" style="top: 300px;">1920-1980-е</div>
                 <div class="timeline-year text-4xl" style="top: 550px;">TO BE CONTINUOUS...</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
