--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             /* Делаем отступ слева, чтобы она не налезала на текст */
             top: 100px;
             /* Располагаем её вертикально */
-            font-size: 1.5rem;
+            font-size: 1rem;
             /* Размер шрифта */
             color: #731a0d;
             /* Цвет */
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">3000–30 гг. до н. э.</div>
+                <div class="timeline-year">3000–30 гг. до н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
