--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">500 г. до н. э. – V век н. э.</div>
+                <div class="timeline-year">500 г. до н. э. – V век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/3ancient.jpg" alt="Ancient" class="rounded-xl shadow-md w-full" />
@@ -235,7 +235,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">500 г. до н. э. – X век н. э.</div>
+                <div class="timeline-year">500 г. до н. э. – X век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -266,7 +266,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">V – XV век н. э.</div>
+                <div class="timeline-year">V – XV век н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/codex.jpg" alt="Codex" class="rounded-xl shadow-md w-full" />
@@ -298,7 +298,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">VII–XV века н. э.
+                <div class="timeline-year">VII–XV века н. э.
 
                 </div>
                 <!-- Правая часть: картинка напротив линии -->
@@ -333,7 +333,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">около 1450 г</div>
+                <div class="timeline-year">около 1450 г</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/middleage.jpg" alt="Middleage" class="rounded-xl shadow-md w-full" />
@@ -363,7 +363,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">XVI-XVII века н. э.</div>
+                <div class="timeline-year">XVI-XVII века н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -395,7 +395,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">начало XIX века</div>
+                <div class="timeline-year">начало XIX века</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/muybridge_race_horse_animated.webp" alt="Photography"
@@ -427,7 +427,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">начало XX века</div>
+                <div class="timeline-year">начало XX века</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -458,7 +458,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">1900–2000 годы</div>
+                <div class="timeline-year">1900–2000 годы</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/books.jpg" alt="Books" class="rounded-xl shadow-md w-full" />
@@ -486,7 +486,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 100px;">1920–1930-е годы</div>
+                <div class="timeline-year">1920–1930-е годы</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <div class="overflow-hidden h-64 rounded-xl shadow-md">
@@ -546,7 +546,7 @@
                     </div>
                 </div>
                 <!-- Зарубка года -->
-                <div class="timeline-year" style="top: 300px;">1920-1980-е</div>
+                <div class="timeline-year">1920-1980-е</div>
                 <div class="timeline-year text-4xl" style="top: 550px;">TO BE CONTINUOUS...</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
