--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
 
         body {
-            background-image: url('files/bck.jpg');
+            background-image: url('files/bck2.jpg');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
