--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 <div class="timeline-year">3000–30 гг. до н. э.</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
-                    <div class="overflow-hidden h-64 rounded-xl shadow-md">
-                        <img src="files/d444f-dancing.webp" alt="Egypt" class="w-full h-full object-cover" />
+                    <div class="overflow-hidden h-72 rounded-xl shadow-md">
+                        <img src="files/egypt.gif" alt="Egypt" class="w-full h-full object-cover" />
                     </div>
                 </div>
             </div>
