fix to be continued

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
                 </div>
                 <!-- Зарубка года -->
                 <div class="timeline-year">1920-1980-е</div>
-                <div class="timeline-year text-4xl" style="top: 550px;">TO BE CONTINUOUS...</div>
+                <div class="timeline-year text-4xl" style="top: 550px;">TO BE CONTINUED...</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
                     <img src="files/kese.gif" alt="Egypt" class="w-full h-full object-cover" />
