--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 <body class="bg-gray-50 text-gray-900 font-sans w-full">
     <header
         class="header-background bg-black h-72 flex items-center justify-center bg-opacity-80 shadow-md px-4 text-center">
+        <div class="absolute top-4 right-4 text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded">
+            Жуловчина Алина
+        </div>
         <h1 class="text-6xl font-bold font-satyr text-white drop-shadow-lg">История графического дизайна</h1>
     </header>
 
