--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
 <body class="bg-gray-50 text-gray-900 font-sans w-full">
     <header
         class="header-background bg-black h-72 flex items-center justify-center bg-opacity-80 shadow-md px-4 text-center">
-        <div class="absolute top-4 right-4 text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded">
-            Жуловчина Алина
+        <div class="absolute top-4 left-4 flex flex-col items-start">
+            <div class="text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded">
+                Жуловчина Алина
+            </div>
+            <img src="logo.jpg" alt="Logo" class="mt-2 w-52 h-52 object-contain" />
         </div>
         <h1 class="text-6xl font-bold font-satyr text-white drop-shadow-lg">История графического дизайна</h1>
     </header>
@@ -179,7 +182,7 @@
                             инструментом для передачи знаний и культуры. Египтяне разработали уникальные формы записи и
                             оформления, которые оказали влияние на всю дальнейшую историю письменности и книгопечатания.
                             Роль книги в египетской культуре была неоценима, она служила средством сохранения знаний и
-                            связующим звеном между поколениями.</p>
+                            связующим звеном между поколениями.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -207,7 +210,7 @@
                             сохранения литературных, философских и научных произведений. Свитки, раскручивающиеся для
                             чтения, постепенно уступили место более удобным кодексам (переплетённым книгам) в первые
                             века нашей эры. Античная книга сыграла ключевую роль в сохранении культурного наследия и
-                            стала важным этапом в развитии письменности и книги как средства массовой коммуникации.</p>
+                            стала важным этапом в развитии письменности и книги как средства массовой коммуникации.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -233,7 +236,7 @@
                             записывались вертикально с помощью кистей и чернил. Ключевые произведения включают Дао дэ
                             цзин и И цзин. В Индии книги писались на пальмовых листьях и пергаменте с использованием
                             санскритских алфавитов, сохраняя такие священные тексты, как Веды и Упанишады. Эти книги не
-                            только хранили знания, но и служили основой для философии, религии и науки в обоих регионах.
+                            только хранили знания, но и служили основой для философии, религии и науки в обоих регионах.
                         </p>
                     </div>
                 </div>
@@ -265,7 +268,7 @@
                             процессом, и они часто украшались миниатюрами, иллюстрациями и орнаментами, что придавало им
                             художественную ценность. Эти книги сыграли важную роль в сохранении знаний и культуре в
                             эпоху до изобретения книгопечатания в XV веке, когда они стали основным способом
-                            распространения информации в Европе.</p>
+                            распространения информации в Европе.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -296,7 +299,7 @@
                             литературы. Книги украшались декоративными элементами, такими как унван (заголовки),
                             каллиграммы, розетки и медальоны. Также важным элементом был оклад книги, который часто
                             оформлялся с использованием драгоценных материалов. Искусство исламской книги стало символом
-                            духовной и культурной значимости в арабском мире и за его пределами.
+                            духовной и культурной значимости в арабском мире и за его пределами.
                         </p>
                     </div>
                 </div>
@@ -332,7 +335,7 @@
                             неотъемлемой частью книг. В XVI-XVII веках художники и мастера, такие как Альбрехт Дюрер и
                             Ганс Холбейн, значительно повлияли на развитие графики, применяя новые подходы в изображении
                             и оформлении книг. Графика в этот период служила не только для украшения, но и для усиления
-                            содержания, придавая книгам художественную и образовательную ценность.</p>
+                            содержания, придавая книгам художественную и образовательную ценность.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -361,7 +364,7 @@
                             тонкие, детализированные изображения, которые применялись не только в печатных книгах, но и
                             в отдельном графическом искусстве. Гравюра на металле стала важным инструментом для
                             распространения культуры и знаний, а её изысканная техника и выразительность оставили
-                            неизгладимый след в истории искусства.
+                            неизгладимый след в истории искусства.
                         </p>
                     </div>
                 </div>
@@ -394,7 +397,7 @@
                             литографических технологий в 1880-1900-х годах, позволил значительно улучшить качество
                             печатной графики, а также ускорить производство изображений. Фотография и фотомеханика стали
                             важными инструментами в искусстве, журналистике и рекламе, а их влияние на визуальную
-                            культуру продолжает ощущаться до сегодняшнего дня.</p>
+                            культуру продолжает ощущаться до сегодняшнего дня.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -425,7 +428,7 @@
                             элементы модернизма и экспериментируя с материалами. В течение столетия графика стала важным
                             способом выражения социальных и политических идей, а также служила отражением изменений в
                             искусстве и культуре. Станковая графика XX века оставила глубокий след в искусствоведении,
-                            став ключевым элементом в развитии современного визуального искусства.
+                            став ключевым элементом в развитии современного визуального искусства.
                         </p>
                     </div>
                 </div>
@@ -457,7 +460,7 @@
                             особенности. В 1920-1930-х годах появились искусственные книги с элементами графики, а с
                             развитием цифровых технологий в конце века книги начали переходить в электронный формат. В
                             XX веке книга стала не только средством передачи информации, но и важным элементом
-                            искусства, слиянием литературы, дизайна и технологий.</p>
+                            искусства, слиянием литературы, дизайна и технологий.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
@@ -484,7 +487,7 @@
                             1920-1930-х годах возникли новые типы визуальных систем, такие как плакаты, логотипы, шрифты
                             и инфографика, которые использовались в рекламе, транспорте и науке. Функциональная графика
                             ориентировалась на понятность и четкость, став основой для современного графического дизайна
-                            и визуальной коммуникации.
+                            и визуальной коммуникации.
                         </p>
                     </div>
                 </div>
@@ -545,7 +548,7 @@
                             Таким образом, графический дизайн в Казахстане прошел путь от основ создания типографических
                             и рекламных материалов в начале XX века до развития современных цифровых и визуальных
                             коммуникаций. Это направление продолжает активно развиваться, отражая изменения в
-                            политической, культурной и социальной жизни страны.</p>
+                            политической, культурной и социальной жизни страны.</p>
                     </div>
                 </div>
                 <!-- Зарубка года -->
