--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
     <header
         class="header-background bg-black h-72 flex items-center justify-center bg-opacity-80 shadow-md px-4 text-center">
         <div class="absolute top-4 left-4 flex flex-col items-start">
-            <div class="text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded">
+            <img src="logo.jpg" alt="Logo" class="w-52 h-52 object-contain" />
+            <div class="text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded mt-2">
                 Жуловчина Алина
             </div>
-            <img src="logo.jpg" alt="Logo" class="mt-2 w-52 h-52 object-contain" />
         </div>
         <h1 class="text-6xl font-bold font-satyr text-white drop-shadow-lg">История графического дизайна</h1>
     </header>
