Upd author name

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     class="w-40 h-40 md:w-52 md:h-52 object-contain hover:opacity-90 transition-opacity" />
             </a>
             <div class="text-white text-sm md:text-base font-semibold bg-black/50 px-3 py-1 rounded mt-2">
-                Жуловчина Алина
+                Жуловчинова Алина
             </div>
         </div>
         <h1 class="text-6xl font-bold font-satyr text-white drop-shadow-lg">История графического дизайна</h1>
